--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -3,15 +3,16 @@
   flex: 1 1 50%;
   flex: 1;
 }
-.home-page-wrapper {
-  height: 100vh;
-}
 
 .home-section {
-  border-style: solid;
-  border-color: var(--color-primary);
-  border-width: 0 2px 2px 2px;
+  height: 100%;
 }
+.home-page-wrapper {
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
 .home-page-wrapper .home-page-right {
   width: 50%;
   flex: 1 1 50%;
@@ -27,6 +28,11 @@
 
 .game-controls {
   border-radius: 2px;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  gap: 20px;
 }
 
 .game-container {
@@ -70,4 +76,53 @@
 
 .home-left-content h1 {
   font-size: 3.5rem;
+}
+
+.controlls-comment {
+  display: flex;
+  flex-direction: column;
+  color: var(--color-primary);
+  font-size: var(--font-size-sm);
+  text-align: center;
+}
+
+.controls-arrow {
+  max-width: 100px;
+  font-size: 1.8rem;
+  color: var(--color-primary);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  margin: 0 auto;
+}
+
+.controlls-arrow2 {
+  gap: 30px;
+}
+
+.arrow-left {
+  display: flex;
+  align-items: center;
+}
+.arrow-right {
+  display: flex;
+  align-items: center;
+}
+.controlls-arrow1 {
+  display: flex;
+  align-items: center;
+}
+.controlls-arrow3 {
+  display: flex;
+  align-items: center;
+}
+.snk-highscore {
+  text-align: center;
+}
+
+.snk-highscore span {
+  font-size: var(--font-size-sm);
+  text-align: center;
+  color: var(--color-primary);
 }
