--- a/client/src/components/Custom-loader/Loader.module.css
+++ b/client/src/components/Custom-loader/Loader.module.css
@@ -8,6 +8,8 @@
   overflow-y: auto;
   border-radius: 8px;
   box-shadow: 0px 0px 10px rgba(0, 255, 0, 0.5);
+  z-index: 99;
+  transform: translate(-50, 50);
 }
 
 .line {
@@ -31,18 +33,24 @@
 }
 
 .wrapper {
-  height: 100vh;
+  /* height: 100vh; */
+  height: 100%;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .wrapper::before {
   content: "";
   height: 100%;
+  top: 0;
+  left: 0;
   width: 100%;
-  background: rgba(36, 15, 227, 0.1);
+  background: rgba(6, 6, 6);
   position: absolute;
+  /* border: 2px solid white; */
 }
