--- a/client/src/components/Navbar/navbar.css
+++ b/client/src/components/Navbar/navbar.css
@@ -4,6 +4,8 @@ header {
   padding-top: 0 !important;
   padding-bottom: 0 !important;
   border: 2px solid var(--color-primary);
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
 }
 header nav {
   height: 100%;
@@ -44,7 +46,7 @@ header nav ul a {
 .nav-icon {
   height: 100%;
   color: var(--color-primary);
-
+  padding-right: 140px;
   flex: 1;
   display: flex;
   align-items: center;
@@ -73,6 +75,9 @@ header nav ul a {
 }
 header ul li {
   position: relative;
+  height: 100%;
+  display: flex;
+  align-items: center;
   transition: all 0.3s ease-in-out;
 }
 
