--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -26,6 +26,7 @@
   box-shadow: 6px 6px 15px rgba(0, 0, 0, 0.1),
     -6px -6px 15px rgba(255, 255, 255, 0.7);
   border-radius: 10px;
+  position: relative;
 
   /* border: 2px solid red; */
 }
@@ -158,4 +159,10 @@
 
 .f-regular {
   font-variation-settings: "wght" 300, "slnt" 80;
+}
+
+.snk-gameover {
+  text-align: center;
+  font-size: 1.7rem;
+  color: red !important;
 }
