--- a/client/src/pages/layout/layout.css
+++ b/client/src/pages/layout/layout.css
@@ -1,12 +1,14 @@
 .layout {
-  height: calc(100vh - 100px);
+  /* height: calc(100vh - 100px); */
+  height: 100%;
 }
 .content {
   height: calc(100vh - 100px);
   width: 90%;
   max-width: 1200px;
   margin: 0 auto;
-  padding: clamp(var(--spacing-md), 5%, var(--spacing-lg));
+  /* padding: 0 var(--spacing-lg); */
+  padding-left: var(--spacing-lg);
   border-width: 0 2px 2px 2px;
   border-style: solid;
   border-color: var(--color-primary);
