--- a/client/src/components/Footer/Footer.module.css
+++ b/client/src/components/Footer/Footer.module.css
@@ -23,7 +23,7 @@ footer {
   display: flex;
   align-items: center;
   height: 100%;
-  padding-right: 94.5px;
+  padding-right: 92px;
   color: var(--color-primary);
 
   border-right: 2px solid var(--color-primary);
@@ -56,6 +56,7 @@ footer {
   display: flex;
 }
 .foterminal {
+  background: #000;
   display: flex;
   height: 100%;
   padding-left: 24px;
