--- a/client/src/pages/about/about.css
+++ b/client/src/pages/about/about.css
@@ -36,6 +36,7 @@
 }
 .about-me-col3 {
   flex: 1 1 73%;
+  position: relative;
   /* background-color: grey; */
   /* padding-top: 24px; */
 }
@@ -73,6 +74,7 @@
   padding-inline: 10px;
   padding-right: 10px;
   padding-left: 25px;
+  padding-right: 25px;
   padding-top: 20px;
 }
 
