--- a/client/src/pages/layout/layout.css
+++ b/client/src/pages/layout/layout.css
@@ -1,9 +1,11 @@
 .layout {
   /* height: calc(100vh - 100px); */
   height: 100%;
+  /* overflow: hidden; */
 }
 .content {
   height: calc(100vh - 100px);
+
   width: 90%;
   max-width: 1200px;
   margin: 0 auto;
@@ -12,4 +14,5 @@
   border-width: 0 2px 2px 2px;
   border-style: solid;
   border-color: var(--color-primary);
+  position: relative;
 }
